src/objects/ADvendio__PlacementContentAssignment__c.object
<CustomObject>
    <description>This object is used to connect both objects &quot;Placement&quot; and &quot;Content&quot; n - n.</description>
    <fields>
        <fullName>ADvendio__Content__c</fullName>
        <description>This field shows the related content.</description>
        <inlineHelpText>This field shows the related content.</inlineHelpText>
        <label>Content</label>
        <referenceTo>ADvendio__Content__c</referenceTo>
        <relationshipLabel>Assigned Placements</relationshipLabel>
        <relationshipName>ContentAssignment</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Placement__c</fullName>
        <description>This field shows the related placement.</description>
        <inlineHelpText>This field shows the related placement.</inlineHelpText>
        <label>Placement</label>
        <referenceTo>ADvendio__Placement__c</referenceTo>
        <relationshipLabel>Assigned Content</relationshipLabel>
        <relationshipName>PlacementAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Placement Content Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Content__c</columns>
        <columns>ADvendio__Placement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PCA-{0000}</displayFormat>
        <label>Placement Content Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placement Content Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>